--- a/index.html
+++ b/index.html
@@ -1,6 +1,13 @@
 <!doctype html>
-<html lang="en">
+<html lang="fr">
   <head>
+    <script>
+      const saved = localStorage.getItem('theme');
+      const prefers = window.matchMedia('(prefers-color-scheme: dark)').matches;
+      const isDark = saved ? saved === 'dark' : prefers || true; // par défaut dark
+      document.documentElement.classList.toggle('dark', isDark);
+    </script>
+
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
